// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Head renders 1`] = `
<DocumentFragment>
  <meta
    charset="UTF-8"
  />
  <title>
    some title preface some title
  </title>
  <style>
    &lt;&lt;CSS:../reports/automated-checks-report.css&gt;&gt;
  </style>
  <style>
    some style sheet
  </style>
</DocumentFragment>
`;

exports[`ReporterHead renders 1`] = `
<DocumentFragment>
  <meta
    charset="UTF-8"
  />
  <title>
    Accessibility Insights automated checks result
  </title>
  <style>
    &lt;&lt;CSS:../reports/automated-checks-report.css&gt;&gt;
  </style>
  <style>
    &lt;&lt;CSS:../../packages/report/bundle/report.css&gt;&gt;
  </style>
</DocumentFragment>
`;

exports[`WebReportHead renders 1`] = `
<DocumentFragment>
  <meta
    charset="UTF-8"
  />
  <title>
    Accessibility Insights for Web FastPass results
  </title>
  <style>
    &lt;&lt;CSS:../reports/automated-checks-report.css&gt;&gt;
  </style>
  <style>
    &lt;&lt;CSS:detailsView.css&gt;&gt;
  </style>
</DocumentFragment>
`;
